[package]
name = "media-controller"
version = "0.2.1"
edition = "2021"
authors = ["Andrew Cleveland"]
description = "HTTP service for controlling MPRIS media players and system volume on Linux"
license = "MIT"
repository = "https://github.com/grimvoodoo/media-controller"
homepage = "https://github.com/grimvoodoo/media-controller"
documentation = "https://github.com/grimvoodoo/media-controller"
readme = "readme.md"
keywords = ["mpris", "media", "audio", "control", "linux"]
categories = ["multimedia::audio", "api-bindings", "web-programming::http-server"]
rust-version = "1.70"

[[bin]]
name = "media-controller"
path = "src/main.rs"

[dependencies]
actix-web = "4.11.0"
enigo = "0.5.0"
mpris = "2.0.1"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
souvlaki = { version = "0.8.3", default-features = false, features = ["use_zbus"]}
